<resources>
    <string name="app_name">Chat App</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to register -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <!--    Sign in    -->
    <string name="identify_or_password_error_incorrect">Invalid phone/email or password.</string>
    <string name="sign_in_email_label">EMAIL</string>
    <string name="sign_in_email_hint"><i><small>Input your email</small></i></string>
    <string name="sign_in_phone_label">PHONE NUMBER</string>
    <string name="sign_in_phone_hint"><i><small>Input your phone number</small></i></string>
    <string name="sign_in_password_label">PASSWORD</string>
    <string name="sign_in_password_hint"><i><small>Input your password</small></i></string>
    <string name="sign_in_mobile">Mobile</string>
    <string name="sign_in_email">Email</string>

    <!--    Register    -->
    <string name="register_email_label">EMAIL</string>
    <string name="register_email_hint"><i><small>Please input your email</small></i></string>
    <string name="register_country_code_label">COUNTRY CODE</string>
    <string name="register_country_hint"><i><small>Input your country code</small></i></string>
    <string name="register_phone_hint"><i><small>Input your phone number</small></i></string>
    <string name="register_phone_label">PHONE</string>
    <string name="register_password_label">PASSWORD</string>
    <string name="register_password_hint"><i><small>Input your password</small></i></string>
    <string name="forgot_password">Forgot password</string>
    <string name="create_account">Create Account</string>
    <string name="login_to_create_account"><u>Create Account</u></string>
    <string name="register_by_email_create_account">Create Account</string>
    <string name="submit">Complete</string>
    <string name="login_here">Login here</string>
    <string name="register_with_your_phone">Register with your phone</string>
    <string name="register_with_your_email">Register with your email</string>
    <string name="agree_to_terms_policies"><![CDATA[<font color=#bbbbbb>By registering, you agree to our</font> <b>Terms of use & Policies</b>.]]></string>


    <!--    Verify by email    -->
    <string name="verify_email_code_label">INPUT THE VERIFICATION CODE</string>
    <string name="verify_email_code_hint"><i><small>Verification code</small></i></string>
    <string name="verify_email_submit">OK</string>
    <string name="resend_activation_code">Resend Activation Code</string>

    <!--    Verify by phone    -->
    <string name="verify_phone_code_label">VERIFICATION CODE</string>
    <string name="verify_phone_code_hint"><i><small>Input the verification code</small></i></string>


    <!--    Dialog    -->
    <string name="dialog_confirm_title">Confirm</string>
    <string name="dialog_confirm_ok">Confirm</string>
    <string name="dialog_confirm_cancel">Cancel</string>
    <string name="general_error_title">Error Message</string>
    <string name="general_warning_title">Warning</string>
    <string name="general_error_message">An error occurs. Please try again later.</string>
    <string name="general_technical_error_message">Cannot process at this time. Please try again later.</string>
    <string name="loading">Loading&#8230;</string>
    <string name="msg_sent_verify_email_code">Please enter the 6-Digit code sent to</string>
    <string name="error_cannot_login">Cannot get user info</string>
    <string name="dialog_close">Close</string>
    <string name="msg_sent_verify_phone_code">We\'ve send a verification code by SMS to the phone number %s</string>
    <string name="msg_input_verify_phone_code">To complete the process, enter the 6 digit code</string>

    <!--    Profile    -->
    <string name="profile_display_name_hint"><i><small>Enter your display name</small></i></string>
    <string name="profile_day_of_birth_label">DATE OF BIRTH</string>
    <string name="profile_display_name_label">DISPLAY NAME</string>
    <string name="profile_day_of_birth_hint"><i><small>Input your date of birth</small></i></string>
    <string name="profile_height_and_weight_label">HEIGHT AND WEIGHT</string>
    <string name="profile_height_and_weight_hint"><i><small>Input your height and weight</small></i></string>
    <string name="unit_system">UNIT SYSTEM</string>
    <string name="update_profile">Update profile</string>
    <string name="update_profile_btn_complete">Complete</string>
    <string name="update_profile_unit_type_type_cm_kg">cm/kg</string>
    <string name="update_profile_unit_type_ft_lb">ft/lb</string>
    <string name="dialog_title_choose_height_and_weight">Height(cm) / Weight(kg)</string>
    <string name="tab_near_you">NEAR YOU</string>
    <string name="tab_chat">CHAT</string>
    <string name="tab_friends">FRIENDS</string>
    <string name="tab_favorites">FAVORITES</string>
    <string name="cannot_find_country">Cannot find country</string>
    <string name="cannot_find_user">Cannot find user</string>
    <string name="list_country_hint_search"><i><small>Search</small></i></string>
    <string name="no_name">No Name</string>

    <string name="age">age</string>
    <string name="display_name">display name</string>
    <string name="height_and_weight">height and weight</string>
    <string name="ethnicity">ethnicity</string>
    <string name="body_type">body type</string>
    <string name="my_tribes">my tribes</string>
    <string name="relationship_status">relationship status</string>
    <string name="city">city</string>
    <string name="state_province">state/province</string>
    <string name="country_region">country/region</string>
    <string name="link_your_networks">Link Your Networks</string>
    <string name="link_your_networks_description">You can always access archived conversations later</string>
    <string name="facebook">facebook</string>
    <string name="facebook_hint"><i><small>Enter your facebook username</small></i></string>
    <string name="google">google+</string>
    <string name="google_hint"><i><small>Enter your Google+ handler</small></i></string>
    <string name="twitter">twitter</string>
    <string name="twitter_hint"><i><small>Enter your Twitter handler</small></i></string>
    <string name="instagram">instagram</string>
    <string name="instagram_hint"><i><small>Enter your Instagram username</small></i></string>
    <string name="linkedin">linkedin</string>
    <string name="linkedin_hint"><i><small>Enter your LinkedIn username</small></i></string>
    <string name="save_changes">Save Changes</string>
    <string name="add_friend">Add Friend</string>
    <string name="write_your_greeting">Write your greeting</string>
    <string name="find_me_on">find me on</string>
    <string name="internal_storage">Internal storage</string>
    <string name="hint_input_your_city"><i><small>Input your city</small></i></string>
    <string name="hint_input_your_city_province"><i><small>Input your city/province</small></i></string>
    <string name="menu_edit">Edit</string>
    <string name="seclect_all">Seclect All</string>
    <string name="delete">Delete</string>
    <string name="menu_cancel">Cancel</string>
    <string name="msg_forgot_password_confirm">We will send a verification code by SMS to the phone number. Please make sure that your phone number is correct.</string>
    <string name="hide_distance">Hide distance</string>
    <string name="blocked_list">Blocked List</string>
    <string name="change_password">Change Password</string>
    <string name="delete_profile">Delete profile</string>
    <string name="about">about</string>
    <string name="terms_of_use">Terms of user</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="log_out">log out</string>
    <string name="msg_sent_verify_phone_code_change_password">Verify code has been sent to your phone number. It may take a few minutes if the network is busy.</string>
    <string name="next">Next</string>
    <string name="update">Update</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="hint_password"><i><small>Password</small></i></string>
    <string name="hint_confirm_password"><i><small>Confirm password</small></i></string>
    <string name="update_new_password">Please update a new password for your account</string>
    <string name="cancel">Cancel</string>
    <string name="Confirm">Confirm</string>
    <string name="forgot_password_enter_email">Enter your email address below:</string>
    <string name="forgot_password_enter_phone">Enter your phone number below:</string>
    <string name="email_address">Email address</string>
    <string name="hint_your_email"><i><small>Your Email</small></i></string>
    <string name="hint_your_phone_number"><i><small>Your Phone Number</small></i></string>
    <string name="btn_continue">Continue</string>
    <string name="btn_go_back_and_login">Go back and login</string>
    <string name="forgot_password_success">New password successfully set up.</string>
    <string name="phone_number">Phone Number</string>
    <string name="join_us">JOIN US</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="video_call">Video Call</string>
    <string name="input_your_country"><i><small>Input your country</small></i></string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="settings_dialog_unit_system">Unit System</string>
    <string name="filter_age">Age</string>
    <string name="search">Search</string>
    <string name="recommended_friends">Recommented Friends</string>

</resources>
