<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:scaleType="centerCrop"
                android:src="@drawable/london_flat" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:elevation="12dp"
                android:src="@drawable/ic_fab_camera"
                android:tint="@color/white"
                app:backgroundTint="@color/light_purge" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/display_name" />

                <EditText
                    android:id="@+id/edt_display_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Andrea Jameson" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/age" />

                <TextView
                    android:id="@+id/tv_age"
                    style="@style/App_EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="20" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/height_and_weight" />

                <TextView
                    android:id="@+id/tv_height_and_weight"
                    style="@style/App_EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="173 / 61" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ethnicity" />

                <TextView
                    android:id="@+id/tv_ethnicity"
                    style="@style/App_EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="South Asian" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/body_type" />

                <TextView
                    android:id="@+id/tv_body_type"
                    style="@style/App_EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Average" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_tribes" />

                <TextView
                    android:id="@+id/tv_my_tribes"
                    style="@style/App_EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Bear" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/relationship_status" />

                <TextView
                    android:id="@+id/tv_relationship_status"
                    style="@style/App_EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Committed" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/city" />

                <TextView
                    android:id="@+id/edt_city"
                    style="@style/App_EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Ho Chi Minh city" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/state_province" />

                <TextView
                    android:id="@+id/tv_country_region"
                    style="@style/App_EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="USA" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="36dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/link_your_networks"
                    android:textColor="@color/dark_purge"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="@string/link_your_networks_description" />

            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook" />

                <EditText
                    android:id="@+id/edt_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_facebook"
                    android:drawablePadding="6dp"
                    android:hint="@string/facebook_hint" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/google" />

                <EditText
                    android:id="@+id/edt_google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_google"
                    android:drawablePadding="6dp"
                    android:hint="@string/google_hint" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter" />

                <EditText
                    android:id="@+id/edt_twitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_twitter"
                    android:drawablePadding="6dp"
                    android:hint="@string/twitter_hint" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/instagram" />

                <EditText
                    android:id="@+id/edt_instagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_instagram"
                    android:drawablePadding="6dp"
                    android:hint="@string/instagram_hint" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    style="@style/form_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/linkedin" />

                <EditText
                    android:id="@+id/edt_linkedin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_linkedin"
                    android:drawablePadding="6dp"
                    android:hint="@string/linkedin_hint" />
            </LinearLayout>

            <include layout="@layout/layout_horizontal_divider" />

            <Button
                style="@style/Button.Submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/save_changes" />


        </LinearLayout>
    </LinearLayout>
</ScrollView>

